Added menu page

--- a/restaurant-interface/src/app/components/consumer/menu/menu.component.html
+++ b/restaurant-interface/src/app/components/consumer/menu/menu.component.html
@@ -1,1 +1,5 @@
-<p>menu works!</p>
+<div class="menuContainer">
+    <app-menu-item itemId="cheese"></app-menu-item>
+    <app-menu-item itemId="pepperoni"></app-menu-item>
+    <app-menu-item itemId="vegetable"></app-menu-item>
+</div>
