--- a/restaurant-interface/src/app/components/consumer/nav/nav.component.html
+++ b/restaurant-interface/src/app/components/consumer/nav/nav.component.html
@@ -1,6 +1,8 @@
 <div class="navContainer flexContainer">
     <div class="flexContainer">
-        <img src="/assets/asu-logo.png" class="asuLogo">
+        <a routerLink="/">
+            <img src="/assets/asu-logo.png" class="asuLogo">
+        </a>
         <div>
             <h1>SunDevil Pizza</h1>
             <div class="flexContainer">
