--- a/restaurant-interface/src/app/components/general/nav-link/nav-link.component.html
+++ b/restaurant-interface/src/app/components/general/nav-link/nav-link.component.html
@@ -1,1 +1,1 @@
-<a [routerLink]="link" routerLinkActive="activeNavLink" class="navLink">{{ text }}</a>
+<a [routerLink]="link" routerLinkActive="activeNavLink" class="navLink" [routerLinkActiveOptions]="{exact: true}">{{ text }}</a>
