--- a/restaurant-interface/src/app/components/consumer/options/options.component.css
+++ b/restaurant-interface/src/app/components/consumer/options/options.component.css
@@ -8,7 +8,7 @@
     text-align: left;
     background-color: #f5f5f5;
     height: 20px;
-    width: 150px;
+    width: 175px;
     padding: 10px;
     border: #dcdcdc 1px solid;
     margin-top: 5px;
@@ -16,4 +16,19 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
+}
+
+.addToCart {
+    background-color: #8C1D40;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: inherit;
+    border-radius: 100px;
+    font-weight: 600;
+}
+
+.addToCart:hover {
+    background-color: #721834;
+    cursor: pointer;
 }
