--- a/restaurant-interface/src/app/components/consumer/options/options.component.html
+++ b/restaurant-interface/src/app/components/consumer/options/options.component.html
@@ -1,7 +1,12 @@
 <div class="optionsContainer">
-    <app-menu-item [itemId]="itemId"></app-menu-item>
+    <app-menu-item [itemId]="item.id"></app-menu-item>
     <label [for]="option[0]" *ngFor="let option of optionList" class="option">
-        <input type="checkbox" [name]="option[0]" [id]="option[0]">
+        <input type="checkbox" [name]="option[0]" (change)="checkBoxEvent($event)">
         {{option[1]}}
     </label>
+    <label>
+        Quantity
+        <input type="number" name="quantity" (change)="changeQuantityEvent($event)">
+    </label>
+    <button class="addToCart" (click)="addToCart()">Add to Cart</button>
 </div>
