--- a/restaurant-interface/src/app/components/consumer/cart/cart.component.html
+++ b/restaurant-interface/src/app/components/consumer/cart/cart.component.html
@@ -1,1 +1,6 @@
-<p>cart works!</p>
+<div>
+    <app-cart-item *ngFor="let item of cart" [item]="item"></app-cart-item>
+    <div>Total: ${{total}}</div>
+    <button (click)="asuriteCheckout()">Checkout With Asurite ID</button>
+    <button (click)="cardCheckout()">Checkout With Credit Card</button>
+</div>
