--- a/restaurant-interface/src/app/components/consumer/asurite-checkout/asurite-checkout.component.css
+++ b/restaurant-interface/src/app/components/consumer/asurite-checkout/asurite-checkout.component.css
@@ -1,14 +1,13 @@
-.optionsContainer {
-    margin: 10px;
+div {
     text-align: center;
+    margin: 30px;
 }
 
-.option {
+label {
     display: block;
     text-align: left;
     background-color: #f5f5f5;
-    height: 20px;
-    width: 175px;
+    width: 400px;
     padding: 10px;
     border: #dcdcdc 1px solid;
     margin-top: 5px;
@@ -26,17 +25,10 @@ button {
     font-size: inherit;
     border-radius: 100px;
     font-weight: 600;
+    margin: 0 20px;
 }
 
 button:hover {
     background-color: #721834;
     cursor: pointer;
-}
-
-.numberInput {
-    width: 30px;
-}
-
-.center {
-    text-align: center;
 }
