--- a/restaurant-interface/src/app/components/consumer/cart-item/cart-item.component.css
+++ b/restaurant-interface/src/app/components/consumer/cart-item/cart-item.component.css
@@ -1,8 +1,8 @@
-.wrapper {
+div {
     display: block;
     text-align: left;
     background-color: #f5f5f5;
-    width: 400px;
+    width: 500px;
     padding: 10px;
     border: #dcdcdc 1px solid;
     margin-top: 5px;
@@ -10,8 +10,4 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-}
-
-.center {
-    text-align: center;
 }
