--- a/restaurant-interface/src/app/components/consumer/cart/cart.component.html
+++ b/restaurant-interface/src/app/components/consumer/cart/cart.component.html
@@ -3,4 +3,5 @@
     <div>Total: ${{total}}</div>
     <button (click)="asuriteCheckout()">Checkout With Asurite ID</button>
     <button (click)="cardCheckout()">Checkout With Credit Card</button>
+    <button (click)="addAnotherItem()">Add Another Item</button>
 </div>
