--- a/restaurant-interface/src/app/components/consumer/menu-item/menu-item.component.html
+++ b/restaurant-interface/src/app/components/consumer/menu-item/menu-item.component.html
@@ -1,7 +1,7 @@
 <a [routerLink]="'/options/' + itemId">
     <div class="menuItem" [style]='"background-image:linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(" + imageUrl + ");"'>
         <div class="price">
-            ${{ price }}
+            ${{ price*2 }}
         </div>
         <div class="name">
             {{ name }}
