swapping to other thing

--- a/restaurant-interface/src/app/components/consumer/cart-item/cart-item.component.html
+++ b/restaurant-interface/src/app/components/consumer/cart-item/cart-item.component.html
@@ -1,1 +1,1 @@
-<div>Item: {{item.id}} <br> gjrbgukjfnqaofnjknkljn: {{item.getOptions()}} <br> Quantity: {{item.quantity}}<br> $10</div>
+<div>Item: {{item.id}} <br> Options: {{item.getOptions()}} <br> Quantity: {{item.quantity}}<br> $10</div>
