--- a/restaurant-interface/src/app/components/consumer/cart/cart.component.css
+++ b/restaurant-interface/src/app/components/consumer/cart/cart.component.css
@@ -1,5 +1,5 @@
 button {
-    background-color: #8C1D40;
+    background-color: #721834;
     color: #fff;
     border: none;
     padding: 10px 20px;
