--- a/restaurant-interface/src/app/components/internal/order-list/order-list.component.html
+++ b/restaurant-interface/src/app/components/internal/order-list/order-list.component.html
@@ -1,11 +1,8 @@
 <div class="center">
     <div *ngFor="let order of orders" class="wrapper">
         <div>Status: {{order.status}}</div>
-        <div *ngFor="let item of order.items">
-            <div>Id: {{item.id}}</div>
-            <div>Quantity: {{item.quantity}}</div>
-            <div>Options: {{item.options}}</div>
-        </div>
+        <app-cart-item *ngFor="let item of order.items" [item]="item" [statusOnly]="true"></app-cart-item>
+        
         <input type="button" value="Set status: Ready to Cook" (click)="setStatus(order.id, 'Ready to Cook')"/>
         <input type="button" value="Set status: Cooking" (click)="setStatus(order.id, 'Cooking')" />
         <input type="button" value="Set status: Ready" (click)="setStatus(order.id, 'Ready')" />
