Fixed checkout button

--- a/restaurant-interface/src/app/components/consumer/asurite-checkout/asurite-checkout.component.html
+++ b/restaurant-interface/src/app/components/consumer/asurite-checkout/asurite-checkout.component.html
@@ -1,7 +1,8 @@
 <div>
+    <button (click)="cardCheckout()">Checkout With Credit Card</button>
     <label>
         Asurite ID:
         <input type="text" name="asurite" (change)="onChange($event)"/>
     </label>
-    <button (click)="checkout()">Checkout</button>
+    <button (click)="checkout()">Checkout With Asurite ID</button>
 </div>
